# mov-cli

./: .gitignore  LICENSE  MANIFEST.in  Makefile  OUTDATED_mov-cli  README.md  __version__.py  actvid(withep).py  disclaimer.md  disclaimer.org  ghtoken.md  imdb.py  mov-cli  mov-cli(prototype).py  mov-cli(with-eps)prototype.py  movcli(prototype_witheps).py  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  runner.py  secretlink(mov).py  setup.py  sflix.py  solarmov(withep).py  theflix(mov).py  theflix(withep).py
.github/: dependabot.yml  pypi.xml
.github/ISSUE_TEMPLATE/: addprovider.md  bug-report.md  feature_request.md  question.md
.github/workflows/: pages.yml  pypi.yml  python-publish.yml  ruff.yml
doc/: 404.html  index.html  style.css
doc/about/: index.html  style.css
doc/css/: 404.css  about.css  disclaimer.css  download.css  style.css
doc/disclaimer/: index.html
doc/download/: index.html  style.css
mov_cli/: __init__.py  __main__.py  __version__,py  __version__.py  config.py  config.template.toml  download.py  errors.py  http_client.py  logger.py  main.py  mov_cli.template.toml  plugins.py  requirements.txt  scraper.py  subtitles.py
mov_cli/cli/: __init__.py  __main__.py  auto_select.py  configuration.py  episode.py  play.py  scraper.py  search.py  ui.py  utils.py  watch_options.py
mov_cli/extractors/: doodstream.py  tukipasti.py
mov_cli/extractors/scdn/: NOTICE  allsportsdaily.py  cr7sports.py  enjoy4hd.py  fabtech.py  gameshdlive.py  livestreames.py  methstreams.py  motornews.py  onestream.py  onionlive.py  onionstream.py  poscitech.py  rainostreams.py  ripple.py  techclips.py  techstips.py  weakstream.py
mov_cli/extractors/sportcentral/: allsportsdaily.py  cr7sports.py  enjoy4hd.py  fabtech.py  gameshdlive.py  methstreams.py  motornews.py  onestream.py  onionlive.py  onionstream.py  poscitech.py  rainostreams.py  ripple.py  techclips.py  techstips.py  weakstream.py
mov_cli/iterfzf/: __init__.py
mov_cli/media/: __init__.py  media.py  metadata.py  movie.py  series.py  tv.py
mov_cli/players/: __init__.py  custom_player.py  mpv.py  player.py  vlc.py
mov_cli/provider/: __init__.py  remotestream.py
mov_cli/scraper_utils/: __init__.py  fuzzy.py  imdb.py  jikan.py  print_m.py  subtitles.py
mov_cli/scrapers/: __init__.py  dopebox.py  eja.py  gogoanime.py  remote_stream.py  scraper.py  sflix.py  solar.py  turkish123.py  viewasian.py
mov_cli/scrapers/providers/: __init__.py  dopebox.py  remote_stream.py  sflix.py  solar.py
mov_cli/scrapers/scraper_utils/: __init__.py  imdb.py
mov_cli/search_apis/: __init__.py  dizilah.py  jikan.py  the_movie_db.py
mov_cli/utils/: __init__.py  config.py  console.py  dbs.py  discord.py  episode_selector.py  extractors.py  history.py  httpclient.py  jsunpack.py  keep_alive.py  lang.py  onstartup.py  platform.py  player.py  presence.py  props.py  provider.py  scraper.py  select.py  update.py  version.py
mov_cli/utils/lang/: ar.json  de.json  en.json  fr.json  ko.json  langs  pl.json  pt.json  ru.json  ta.json
mov_cli/utils/scraper/: __init__.py  fuzzy.py  imdb.py  subtitles.py  the_movie_db.py
mov_cli/version/: __version__.py
mov_cli/websites/: actvid.py  animefox.py  ask4movie.py  dopebox.py  einthusan.py  eja.py  goal.py  gogoanime.py  hentaimama.py  javct.py  kimcartoon.py  kinox.py  kisscartoon.py  olgply.py  openloadmov.py  pornhub.py  redundant_kimcartoon.py  remotestream.py  scdn.py  sflix.py  solar.py  sportscentral.py  streamblasters.py  tamilyogi.py  theflix.py  trailers.py  turkish123.py  ustvgo.py  vidsrc.py  viewasian.py  watchasian.py  wlext.py  xxxmax.py  yoturkish.py
mov_cli/websites/anime/: gogoanime.py
mov_cli/websites/asian/: viewasian.py  watchasian.py
mov_cli/websites/cartoons/: kisscartoon.py  redundant_kimcartoon.py
mov_cli/websites/discontinued/: actvid.py
mov_cli/websites/english/: actvid.py  dopebox.py  remotestream.py  sflix.py  solar.py
mov_cli/websites/indian/: einthusan.py  streamblasters.py  tamilyogi.py
mov_cli/websites/international/: wlext.py
mov_cli/websites/livetv/: eja.py
mov_cli/websites/sports/: scdn.py
mov_cli/websites/turkish/: turkish123.py  yoturkish.py
scripts/: temporary_scraper_test.py  test_cli.py  test_play.py  test_providers.py  test_subtitles.py
